tests/codegen/fail/aliased_dynamic_task_handle_root_use_after_move_build.ql
struct Wrap {
    values: [Int; 0],
}

async fn worker() -> Wrap {
    return Wrap { values: [] }
}

async fn helper(index: Int) -> Wrap {
    let tasks = [worker(), worker()]
    let alias = tasks
    let first = await alias[index]
    return await tasks[index]
}
